--- a/music/css/index.less
+++ b/music/css/index.less
@@ -118,7 +118,11 @@ a{
   .floatR;
   .size(.5rem,.44rem);
   margin-top: 0;
+
 }
+  a.on{
+    background-position: 0 -30px;
+  }
 }
 .progress{
   position: relative;
